Update Header spacing to remove white space issue

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,4 @@
 .navSection {
-    padding: 0px;
     margin: auto;
     position: relative;
     width: 100%;
@@ -32,7 +31,6 @@
 
 @media screen and (min-width: 568px) {
     .navSection {
-        padding: 0px;
         margin: auto;
         position: relative;
         width: 100%;
@@ -50,7 +48,6 @@
 
 @media screen and (min-width: 768px) {
     .navSection {
-        padding: 0px;
         margin: auto;
         position: relative;
         width: 100%;
@@ -73,7 +70,6 @@
 
 @media screen and (min-width: 1024px) {
     .navSection {
-        padding: 0px;
         margin: auto;
         position: relative;
         width: 100%;
